--- a/ztn/templates/enrichment.html
+++ b/ztn/templates/enrichment.html
@@ -192,7 +192,7 @@
                     <label for="policy_name">Policy Name</label>
                 </td>
                 <td>
-                    <input name="policy_name" name="policy_name" type="text" placeholder="ZTN_ELK_POLICY_12345">
+                    <input name="policy_name" type="text" placeholder="ZTN_ELK_POLICY_12345">
                 </td>
             </tr>
             <tr>
@@ -200,7 +200,7 @@
                     <label for="rule_name">Rule Name</label>
                 </td>
                 <td>
-                    <input name="rule_name" id="rule_name" type="text" placeholder="ZTN_ELK_RULE_12345">
+                    <input name="rule_name" type="text" placeholder="ZTN_ELK_RULE_12345">
                 </td>
             </tr>
         </table>
