--- a/ztn/templates/enrichment.html
+++ b/ztn/templates/enrichment.html
@@ -1,3 +1,15 @@
+<!-- Copyright (c) Juniper Networks, Inc., 2020 - 2022. All rights reserved.
+
+Notice and Disclaimer: This code is licensed to you under the GNU General Public License v3.0.
+You may not use this code except in compliance with the License.
+This code is not an official Juniper product.
+You can obtain a copy of the License at https://www.gnu.org/licenses/gpl-3.0.txt
+
+SPDX-License-Identifier: GPL-3.0-or-later
+
+Third-Party Code: This code may depend on other components under separate copyright notice and license terms.
+Your use of the source code for those components is subject to the terms and conditions of the respective license as noted in the Third-Party source code file. -->
+
 <html>
 
 <head>
@@ -217,7 +229,7 @@
                     <label for="policy_schedule_name">Policy Schedule Name</label>
                 </td>
                 <td>
-                    <input type="text" name="policy_schedule_name" placeholder="ZTN_ELK_SCHEDULE_12345" disabled>
+                    <input type="text" name="policy_schedule_name" id="policy_schedule_name" placeholder="ZTN_ELK_SCHEDULE_12345" disabled>
                 </td>
             </tr>
             <tr>
